EGT 204 update for today's class:  published slides and PS#4, modified PS#5

--- a/F19/204/204F19DN.HTM
+++ b/F19/204/204F19DN.HTM
@@ -101,12 +101,12 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/153857789/download?download_frd=1"><!-- -->
-	  9/03<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      9/05<!-- --</a><!-- --></td>
+	  9/03<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/154039870/download?download_frd=1"><!-- -->
+      9/05<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Comb. Logic, Boolean Alg., operators, truth tables, silly &amp; 2 new theorems<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->Duality, Def'ns: var, literal, term, SOP, POS, SSOP, SPOS, &Sigma;m, &Pi;M, Grey code<!--end comment--></td>  
    </TR><!-- Week of 9/09------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
