--- a/F19/204/204F19PS.HTM
+++ b/F19/204/204F19PS.HTM
@@ -54,7 +54,7 @@ INTRODUCTION TO MICROPROCESSORS AND DIGITAL CIRCUITS--EGR 204<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                                >(Last update 9/04/2019 5:13 pm)
+                                >(Last update 9/05/2019 10:29 am)
 <!--  LAST UPDATE  ----------------------------------- -->
                                                  </DIV></TD></TR>
 </TABLE>
@@ -99,16 +99,21 @@ PS                                                           <BR>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: Karnaugh maps (K-maps) and optimizaton <br>&nbsp;
         Read Ch 2 Sec 2-5, 2-6, 2-7                    <BR>&nbsp;
-        Do 2-15*, 2-16<!--5-->, 2-19*, 2-34<!--5--> 
+        Do 2-14<!--5-->, 2-15*, 2-16<!--5-->, 2-19*, 2-34<!--5--> <BR>&nbsp;
+		                                               <br>&nbsp;
+        Note on 2-14: "Optimize" means to "reduce to   <br>&nbsp;
+		SOP or POS form" as shown by several examples  <br>&nbsp;
+		in section 2-4.
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
- &nbsp;
+ 4
 
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
-        &nbsp;
+        9/05
 
    <!-- Due -->             </TD><TD align="center" valign="top">
-        &nbsp;<BR>
+        9/10<BR>
+		9/12
         
         
    <!-- Returned -->    </TD><TD align="center" valign="top"><BR>
@@ -116,17 +121,19 @@ PS                                                           <BR>
         "http://courses.dordt.edu/file.php/34/S13/HW/204S13P04.PDF"
         title="Click to see solutions">2/01</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
-        Topics: Standard forms of Boolean logic        <br>&nbsp;
+        Topics: Duality, Definitions of                <br>&nbsp;
                          &nbsp; &nbsp &nbsp; &nbsp; &nbsp; &nbsp;
-                Two-level logic                        <br>&nbsp;     
-        Read Ch 2 Sec 2-3, 2-4                         <BR>&nbsp;
-        Do 2-10*, 2-11, 2-12*, 2-14<!--5-->            <BR>&nbsp;
+                variable, literal, term, sum term,     <br>&nbsp;
+                         &nbsp; &nbsp &nbsp; &nbsp; &nbsp; &nbsp;
+				SOP, POS, SSOP, SPOS, &Sigma;m, &Pi;M  <br>&nbsp;
+                         &nbsp; &nbsp &nbsp; &nbsp; &nbsp; &nbsp;
+				Grey code                              <br>&nbsp;
+        Read Ch 1, Section 1-7, Ch 2 Sec 2-3,          <BR>&nbsp;
+        <DO>Do 1-29<!--5-->, 2-10*, 2-11, 2-12*</DO>           <BR>&nbsp;
                                                        <br>&nbsp;
         Note errata on the <a href=
         "../../errata/Mano_Kime/5th/MKM_5_ERR.HTM#P_104"
-                      >answer to Problem 2-12*</a>     <BR>&nbsp;
-        Note on 2-14: "Optimize" means to "simplify"   <BR>&nbsp;
-        as shown by several examples in section 2-4.
+                      >answer to Problem 2-12*</a>
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  3
