--- a/F19/363/363F19DN.HTM
+++ b/F19/363/363F19DN.HTM
@@ -101,12 +101,12 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/153950184/download?download_frd=1"><!-- -->
-	  9/03<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      9/05<!-- --</a><!-- --></td>
+	  9/03<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/154051676/download?download_frd=1"><!-- -->
+      9/05<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Signals: odd, even, hermitian, complex, common signals, power and energy<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->Probs 2.5.3, 2.6.1, Linear syst, time invariant, causal<!--end comment--></td>  
    </TR><!-- Week of 9/09------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
