--- a/F19/363/363F19PS.HTM
+++ b/F19/363/363F19PS.HTM
@@ -25,7 +25,11 @@ A:visited {
    }
 A:hover {
    text-decoration: underline;
-   } -->
+   }
+DO {
+   color: #4169E1; /* royal blue */
+   text-decoration: none;
+   }   -->
 </style>
 </head>
 
@@ -49,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 9/02/2019 9:52 pm)
+                               >(Last update: 9/05/2019 1:47 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -81,25 +85,23 @@ PS                                                       </small>
 
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top"> 
- &nbsp;
+ 3
 
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
-        &nbsp;<br>
+        9/05<br>
 
    <!-- Due -->             </TD><TD align="center" valign="top">
-        &nbsp;<br>
+        9/12<br>
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        &nbsp:<!-- <a href=
+        &nbsp;<!-- <a href=
 		"https://dordt.instructure.com/files/114137518/download?download_frd=1"
 		>9/12</a><br>        
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics:  Linearity, convolution                <br>&nbsp;
-        Review Ch 2 Sec. 2.1; Read Ch 2 Sec. 2.2.      <br>&nbsp;
-                                                       <br>&nbsp
-        Do 2.7, 2.16, 2.24, 2.34
-         
-
+        Read Ch 2 Sec. 2.1                             <br>&nbsp;
+                                                       <br>&nbsp;
+        <DO>Do 2.7, 2.16, 2.24, 2.28</DO>
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top"> 
  2
@@ -118,7 +120,7 @@ PS                                                       </small>
         Topics: Types of signals & systems             <br>&nbsp;
         Read: Ch 1 Sec. 1.4, Ch.2 through Sec. 2.1     <br>&nbsp;
                                                        <br>&nbsp;
-        Do (p. 101) 2.1 (all parts), 2.5, 2.6          <br>&nbsp;
+        <DO>Do (p. 101) 2.1 (all parts), 2.5, 2.6</DO> <br>&nbsp;
         Use a computer to make the plots for 2.1.      <br>&nbsp;
         Octave or Matlab are recommended.              <br>&nbsp;
         Here is a <a href="p2_1_starter.pdf"
