Published EGR 363 PS#2 solutions

--- a/F19/363/363F19PS.HTM
+++ b/F19/363/363F19PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 9/05/2019 1:47 pm)
+                               >(Last update: 9/06/2019 6:21 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -113,9 +113,9 @@ PS                                                       </small>
         9/05<br>
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        &nbsp; <!-- <a href=
-		"https://dordt.instructure.com/files/xxxxxxxxx/download?download_frd=1"
-		>9/10</a><br> -->         
+        <a href=
+		"https://dordt.instructure.com/files/154142804/download?download_frd=1"
+		>9/10</a><br>        
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: Types of signals & systems             <br>&nbsp;
         Read: Ch 1 Sec. 1.4, Ch.2 through Sec. 2.1     <br>&nbsp;
