--- a/F19/204/204F19PS.HTM
+++ b/F19/204/204F19PS.HTM
@@ -54,7 +54,7 @@ INTRODUCTION TO MICROPROCESSORS AND DIGITAL CIRCUITS--EGR 204<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                                >(Last update 9/06/2019 2:13 pm)
+                                >(Last update 9/10/2019 10:15 am)
 <!--  LAST UPDATE  ----------------------------------- -->
                                                  </DIV></TD></TR>
 </TABLE>
@@ -97,9 +97,28 @@ PS                                                           <BR>
         "http://courses.dordt.edu/file.php/34/S13/HW/204S13P05.PDF"
         title="Click to see solutions">2/01</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
-        Topics: Karnaugh maps (K-maps) and optimizaton <br>&nbsp;
+        Topics: Incompletely specified functions <br>&nbsp;
         Read Ch 2 Sec 2-5, 2-6, 2-7                    <BR>&nbsp;
-        Do 2-14<!--5-->, 2-15*, 2-16<!--5-->, 2-19*, 2-34<!--5--> <BR>&nbsp;
+        Do  2-34<!--5-->, (more to be added)
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
+ 5
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        9/10
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        9/12<BR>
+        9/17
+        
+   <!-- Returned -->    </TD><TD align="center" valign="top"><BR>
+        &nbsp; <!-- <a href=
+        "http://courses.dordt.edu/file.php/34/S13/HW/204S13P05.PDF"
+        title="Click to see solutions">2/01</a><br>
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics: Karnaugh maps (K-maps) and optimizaton <br>&nbsp;
+        Read Sec 2-4, 2-5 up to page 75, "Don't Care..."<BR>&nbsp;
+        <DO>Do 2-14<!--5-->, 2-15*, 2-16<!--5-->, 2-19*</DO><BR>&nbsp;
 		                                               <br>&nbsp;
         Note on 2-14: "Optimize" means to "reduce to   <br>&nbsp;
 		SOP or POS form" as shown by several examples  <br>&nbsp;
