--- a/F19/204/204F19PS.HTM
+++ b/F19/204/204F19PS.HTM
@@ -54,7 +54,7 @@ INTRODUCTION TO MICROPROCESSORS AND DIGITAL CIRCUITS--EGR 204<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                                >(Last update 9/10/2019 10:15 am)
+                                >(Last update 9/11/2019 12:11 am)
 <!--  LAST UPDATE  ----------------------------------- -->
                                                  </DIV></TD></TR>
 </TABLE>
@@ -165,9 +165,9 @@ PS                                                           <BR>
         9/10      
         
    <!-- Returned -->    </TD><TD align="center" valign="top"><BR>
-        &nbsp;<!-- <a href=
-        "http://courses.dordt.edu/file.php/34/S13/HW/204S13P03.PDF"
-        title="Click to see solutions">1/25</a><br> -->
+        <a href=
+        "https://dordt.instructure.com/files/154431199/download?download_frd=1"
+        title="Click to see solutions">9/12</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: Gates and Boolean logic                <br>&nbsp;
         Read Ch 2 Sec 2-1, 2-2                         <BR>&nbsp;
@@ -188,7 +188,7 @@ PS                                                           <BR>
    <!-- Returned -->    </TD><TD align="center" valign="top"><BR>
         <a href=
         "https://dordt.instructure.com/files/154123985/download?download_frd=1"
-        title="Click to see solutions">9/10</a><br>
+        title="Click to see solutions">9/12</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: Coded information, eg. BCD, ASCII      <BR>&nbsp;
         Read Ch 1 Sec 1-4 through 1-7                  <BR>&nbsp;
