--- a/F19/204/204F19DN.HTM
+++ b/F19/204/204F19DN.HTM
@@ -111,12 +111,12 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/154347091/download?download_frd=1"><!-- -->
-	  9/10<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      9/12<!-- --</a><!-- --></td>
+	  9/10<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/154526449/download?download_frd=1"><!-- -->
+      9/12<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->K-maps, Definitions:  Implicant, Prime Implicant, <font color="red">&hearts;</font>Essential Prime Implicant<font color="red">&hearts;</font><!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->Incompletely spec'ed functions (X), multiple outputs and shared implicants<!--end comment--></td>  
    </TR><!-- Week of 9/16------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
