--- a/F19/204/204F19PS.HTM
+++ b/F19/204/204F19PS.HTM
@@ -54,7 +54,7 @@ INTRODUCTION TO MICROPROCESSORS AND DIGITAL CIRCUITS--EGR 204<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                                >(Last update 9/11/2019 12:11 am)
+                                >(Last update 9/12/2019 2:30 pm)
 <!--  LAST UPDATE  ----------------------------------- -->
                                                  </DIV></TD></TR>
 </TABLE>
@@ -100,6 +100,27 @@ PS                                                           <BR>
         Topics: Incompletely specified functions <br>&nbsp;
         Read Ch 2 Sec 2-5, 2-6, 2-7                    <BR>&nbsp;
         Do  2-34<!--5-->, (more to be added)
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
+ 6
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        9/12
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        9/17<BR>
+        9/19
+        
+   <!-- Returned -->    </TD><TD align="center" valign="top"><BR>
+        &nbsp; <!-- <a href=
+        "http://courses.dordt.edu/file.php/34/S13/HW/204S13P05.PDF"
+        title="Click to see solutions">2/01</a><br>
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics: Incompletely specified functions <br>&nbsp;
+        Read Ch 2 Sec 2-5 from page 75 "Don't Care..." to <BR>&nbsp;
+		the end of the Section.                           <br>&nbsp;
+		                                                  <br>&nbsp;
+        <DO>Do  2-24, 2-25*, 2-26 part (1) only</DO>
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  5
