EGR 363 class slides posted, EGR 362 PS#4 posted, EGR 204 homework page refomatted very slightly

--- a/F19/363/363F19DN.HTM
+++ b/F19/363/363F19DN.HTM
@@ -111,12 +111,12 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/154401756/download?download_frd=1"><!-- -->
-	  9/10<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      9/12<!-- --</a><!-- --></td>
+	  9/10<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/154565809/download?download_frd=1"><!-- -->
+      9/12<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Monday    -->&nbsp;<!--start comment-->Convolution:  1.)  Superposition Integral,  2.) Mirror and Slide.  Properties of<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Monday    -->&nbsp;<!--start comment-->Convolution:  1.)  Superposition integral,  2.) Mirror and slide.  Properties of<!--end comment--><br>
+      <!--Friday    -->&nbsp;<!--start comment-->Reveiw complex numbers, transforms&mdash;change of perspective, dot product<!--end comment--></td>  
    </TR><!-- Week of 9/16------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
