--- a/F19/363/363F19PS.HTM
+++ b/F19/363/363F19PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 9/06/2019 6:21 pm)
+                               >(Last update: 9/12/2019 4:44 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -83,6 +83,30 @@ PS                                                       </small>
    Problems Assigned             <br><DIV style="font-size: 80%">
    (In Proakis &amp; Salehi unless otherwise noted)    </DIV></B>
 
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top"> 
+ 3
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        9/05<br>
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        9/12<br>
+        
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+        &nbsp;<!-- <a href=
+		"https://dordt.instructure.com/files/114137518/download?download_frd=1"
+		>9/12</a><br>        
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics:  Linearity, convolution                <br>&nbsp;
+        Read Ch 2 Sec. 2.1                             <br>&nbsp;
+        Read and observe Problems 2.37, 2.38 on pages  <br>&nbsp;
+		106-107.  These are theorems that relate to    <br>&nbsp;
+		transforms in general. The proofs requested are<br>&nbsp;
+		tedious (hence not assigned), but the theorems <br>&nbsp;
+		are famous.                                    <br>&nbsp;
+		                                               <br>&nbsp;
+        <DO>Do 2.31, 2.34, 2.35, 2.36</DO>
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top"> 
  3
