Published solutions to EGR 204 PS#4

--- a/F19/204/204F19PS.HTM
+++ b/F19/204/204F19PS.HTM
@@ -54,7 +54,7 @@ INTRODUCTION TO MICROPROCESSORS AND DIGITAL CIRCUITS--EGR 204<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                                >(Last update 9/12/2019 2:30 pm)
+                                >(Last update 9/12/2019 11:18 pm)
 <!--  LAST UPDATE  ----------------------------------- -->
                                                  </DIV></TD></TR>
 </TABLE>
@@ -156,9 +156,9 @@ PS                                                           <BR>
         
         
    <!-- Returned -->    </TD><TD align="center" valign="top"><BR>
-        &nbsp;<!-- <a href=
-        "http://courses.dordt.edu/file.php/34/S13/HW/204S13P04.PDF"
-        title="Click to see solutions">2/01</a><br>
+        <a href=
+        "https://dordt.instructure.com/files/154588840/download?download_frd=1"
+        title="Click to see solutions">9/17</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: Duality, Definitions of                <br>&nbsp;
                          &nbsp; &nbsp &nbsp; &nbsp; &nbsp; &nbsp;
