--- a/F19/363/363F19PS.HTM
+++ b/F19/363/363F19PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 9/12/2019 4:52 pm)
+                               >(Last update: 9/14/2019 7:15 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -118,9 +118,9 @@ PS                                                       </small>
         9/12<br>
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        &nbsp;<!-- <a href=
-		"https://dordt.instructure.com/files/114137518/download?download_frd=1"
-		>9/12</a><br>        
+        <a href=
+		"https://dordt.instructure.com/files/154671686/download?download_frd=1"
+		>9/17</a><br>        
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics:  Linearity, convolution                <br>&nbsp;
         Read Ch 2 Sec. 2.1                             <br>&nbsp;
@@ -138,7 +138,7 @@ PS                                                       </small>
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
         <a href=
-		"https://dordt.instructure.com/files/154142804/download?download_frd=1"
+		"https://dordt.instructure.com/files/154671823/download?download_frd=1"
 		>9/10</a><br>        
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: Types of signals & systems             <br>&nbsp;
