published new errata, mano, kime, martin 5e, online answer to 2-25 part c

--- a/errata/Mano_Kime/5th/MKM_5_ERR.HTM
+++ b/errata/Mano_Kime/5th/MKM_5_ERR.HTM
@@ -13,7 +13,7 @@ A:visited {color: #CC9900; font-weight:bold;
 <p align="center"><A HREF="../../../index.html">
                    Professor De Boer</A>'s list of<br><a href="../../../ERRATA/err.htm"> 
                        TEXTBOOK ERRATA</a><br>
-                   (last update 8/29/2019)<br>
+                   (last update 9/16/2019)<br>
                                <br>
    <img src="ManoKimeMartin5Cover100x132_0133760634.png" width="100" height="132"><br>
   Mano, Kime, and Martin, <I>Logic and Computer Design Fundamentals</I>,<br>
@@ -91,11 +91,24 @@ Page 104, Problem 2-12.</b><br>
    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
    <small><i>(Posted 6/10/2019)</i></small>
       
+                                   <br><br><A NAME="P_106"></A><b>
+Page 106, Problem 2-25.</b><br>
+   The answer for part (c) given online at the publisher's web site 
+   uses non-standard notation.  Basically, it is wrong.  Part (c) has
+   two possible correct answers, only one of which needs to be 
+   presented.  <br><br>
+   One possible correct answer is <br>
+   <IMG SRC="MK_ERR_Prob2_25_part_c_2.GIF" style="width:154px;height:14px;"><br><br>
+   The other possible correct answer is <br>
+   <IMG SRC="MK_ERR_Prob2_25_part_c_1.GIF" style="width:154px;height:14px;"><br><br>
+   &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+   <small><i>(Posted 9/16/2019)</i></small>
+      
                                  <br><br><A NAME="P_120"></A><b>
 Pages 127-128, Example 3-5</b><br>
    In the definition of variables and again in Figure 3.11 
    change <i>IG</i> to <i>IS</i>.<br>
-&nbsp; &nbsp; &nbsp; &nbsp; <small><i>
+   &nbsp; &nbsp; &nbsp; &nbsp; <small><i>
         (Posted 6/10/2019)                            </i></small>
 		
                                    <br><br><A NAME="P_190"></A><b>
