--- a/F19/204/204F19PS.HTM
+++ b/F19/204/204F19PS.HTM
@@ -54,7 +54,7 @@ INTRODUCTION TO MICROPROCESSORS AND DIGITAL CIRCUITS--EGR 204<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                                >(Last update 9/12/2019 11:30 pm)
+                                >(Last update 9/16/2019 10:45 am)
 <!--  LAST UPDATE  ----------------------------------- -->
                                                  </DIV></TD></TR>
 </TABLE>
@@ -119,7 +119,12 @@ PS                                                           <BR>
         Topics: Incompletely specified functions <br>&nbsp;
         Read Ch 2 Sec 2-5 from page 75 "Don't Care..." to <BR>&nbsp;
 		the end of the Section.                           <br>&nbsp;
-        <DO>Do  2-24, 2-25*, 2-26 part (1) only</DO>
+        <DO>Do  2-24, 2-25*, 2-26 part (1) only</DO>      <br>&nbsp;
+		                                                  <br>&nbsp;
+        Note errata on the <a href=
+        "../../errata/Mano_Kime/5th/MKM_5_ERR.HTM#P_106"
+                      >answer to Problem 2-25*</a>
+
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  5
