--- a/F19/204/204F19PS.HTM
+++ b/F19/204/204F19PS.HTM
@@ -54,7 +54,7 @@ INTRODUCTION TO MICROPROCESSORS AND DIGITAL CIRCUITS--EGR 204<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                                >(Last update 9/16/2019 10:45 am)
+                                >(Last update 9/17/2019 8:49 pm)
 <!--  LAST UPDATE  ----------------------------------- -->
                                                  </DIV></TD></TR>
 </TABLE>
@@ -97,9 +97,29 @@ PS                                                           <BR>
         "http://courses.dordt.edu/file.php/34/S13/HW/204S13P05.PDF"
         title="Click to see solutions">2/01</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
-        Topics: Incompletely specified functions <br>&nbsp;
-        Read Ch 2 Sec 2-5, 2-6, 2-7                    <BR>&nbsp;
+        Topics: Hardware description languages (HDL)   <br>&nbsp;
+        Read Ch 2 Sec 2-8, 2-9                    <BR>&nbsp;
         Do  2-34<!--5-->, (more to be added)
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
+ 7
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        9/17
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        9/19<BR>
+        9/24
+        
+   <!-- Returned -->    </TD><TD align="center" valign="top"><BR>
+        &nbsp; <!-- <a href=
+        "http://courses.dordt.edu/file.php/34/S13/HW/204S13P05.PDF"
+        title="Click to see solutions">2/01</a><br>
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics: Application of implicant tables to K-maps <br>&nbsp;
+        Read classroom slides (topic is not in textbook)  <BR>&nbsp;
+        <DO>Do  <a href="DDB_2_91.pdf">2-21</a>, <a href="DDB_2_92.pdf">2-92</a></DO>                           <br>&nbsp;
+		(Each problem number is a link.)
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  6
