Published solutions EGR 204 PS#5

--- a/F19/204/204F19PS.HTM
+++ b/F19/204/204F19PS.HTM
@@ -54,7 +54,7 @@ INTRODUCTION TO MICROPROCESSORS AND DIGITAL CIRCUITS--EGR 204<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                                >(Last update 9/18/2019 3:13 pm)
+                                >(Last update 9/18/2019 8:21 pm)
 <!--  LAST UPDATE  ----------------------------------- -->
                                                  </DIV></TD></TR>
 </TABLE>
@@ -157,9 +157,9 @@ PS                                                           <BR>
         9/17
         
    <!-- Returned -->    </TD><TD align="center" valign="top"><BR>
-        &nbsp; <!-- <a href=
-        "http://courses.dordt.edu/file.php/34/S13/HW/204S13P05.PDF"
-        title="Click to see solutions">2/01</a><br>
+        <a href=
+        "https://dordt.instructure.com/files/154966815/download?download_frd=1"
+        title="Click to see solutions">9/18</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics: Karnaugh maps (K-maps) and optimizaton <br>&nbsp;
         Read Sec 2-4, 2-5 up to page 75, "Don't Care..."<BR>&nbsp;
