EGR 204 daily slides and Ps#8 published.  Errata anchor typo fixed

--- a/F19/204/204F19DN.HTM
+++ b/F19/204/204F19DN.HTM
@@ -121,12 +121,12 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/154882893/download?download_frd=1"><!-- -->
-	  9/17<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      9/19<!-- --</a><!-- --></td>
+	  9/17<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/155047127/download?download_frd=1"><!-- -->
+      9/19<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->K-map with an implication table, QM, Expresso, sufficient set of gates  <!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->K-map &amp; XOR, bus notation, decoders, encoders<!--end comment--></td>  
    </TR><!-- Week of 9/23------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
@@ -136,7 +136,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       9/26<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment--><font color=grey>Test #1 (No slides)</font><!--end comment--></td>  
    </TR><!-- Week of 9/30------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
