--- a/F19/204/204F19PS.HTM
+++ b/F19/204/204F19PS.HTM
@@ -54,7 +54,7 @@ INTRODUCTION TO MICROPROCESSORS AND DIGITAL CIRCUITS--EGR 204<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                                >(Last update 9/18/2019 8:21 pm)
+                                >(Last update 9/19/2019 8:31 pm)
 <!--  LAST UPDATE  ----------------------------------- -->
                                                  </DIV></TD></TR>
 </TABLE>
@@ -100,6 +100,30 @@ PS                                                           <BR>
         Topics: Hardware description languages (HDL)   <br>&nbsp;
         Read Ch 2 Sec 2-8, 2-9                    <BR>&nbsp;
         Do  2-34<!--5-->, (more to be added)
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
+ 8
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        9/19
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        9/24<BR>
+        10/01
+        
+   <!-- Returned -->    </TD><TD align="center" valign="top"><BR>
+        &nbsp; <!-- <a href=
+        "http://courses.dordt.edu/file.php/34/S13/HW/204S13P05.PDF"
+        title="Click to see solutions">2/01</a><br>
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics: Decoders, Encoders                     <br>&nbsp;
+		Read Chapter 2, Section 2.6, 2.7,              <br>&nbsp;
+        Chapter 3 Sections 3-1 through 3-6.            <BR>&nbsp;
+        <DO>Do 2-28, 3-21, 3-24</DO>                   <br>&nbsp;
+		                                               <br>&nbsp;
+		Note errata on <a href=
+        "../../errata/Mano_Kime/5th/MKM_5_ERR.HTM#P_127"
+                      >pages 127-128, Example 3-5</a>.
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  7
