EGR 363 slides for today, PS#5 published.  Typo in EGR 204 Problem 2.92 fixed

--- a/F19/363/363F19DN.HTM
+++ b/F19/363/363F19DN.HTM
@@ -121,12 +121,12 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
 	  "https://dordt.instructure.com/files/154875760/download?download_frd=1"><!-- -->
-	  9/17<!-- --></a><!-- --><br><!-- --<a href=
-      "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-      9/19<!-- --</a><!-- --></td>
+	  9/17<!-- --></a><!-- --><br><!-- --><a href=
+      "https://dordt.instructure.com/files/155049463/download?download_frd=1"><!-- -->
+      9/19<!-- --></a><!-- --></td>
       <TD align="left" valign="bottom">
       <!--Monday    -->&nbsp;<!--start comment-->Problems 2.31, 2.34, Introduction to the Fourier Series<!--end comment--><br>
-      <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
+      <!--Friday    -->&nbsp;<!--start comment-->Example: F.S. of a periodic pulse.  Visualizations in frequency domain <!--end comment--></td>  
    </TR><!-- Week of 9/23------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
