--- a/F19/363/363F19PS.HTM
+++ b/F19/363/363F19PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 9/14/2019 7:15 pm)
+                               >(Last update: 9/19/2019 10:13 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -83,6 +83,56 @@ PS                                                       </small>
    Problems Assigned             <br><DIV style="font-size: 80%">
    (In Proakis &amp; Salehi unless otherwise noted)    </DIV></B>
 
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top"> 
+ 5
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        9/19<br>
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        9/26<br>
+        
+   <!-- Returned -->        </TD><TD align="center" valign="top">
+        &nbsp;<!-- <a href=
+		"https://dordt.instructure.com/files/114137518/download?download_frd=1"
+		>9/12</a><br>        
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics:  Fourier Series                        <br>&nbsp;
+        Read Ch 2 Sec. 2.2                             <br>&nbsp;
+		                                               <br>&nbsp;
+        <DO>Do 2.39.1, 2.39.4</DO>                     <br>&nbsp;
+		                                               <br>&nbsp;
+		Hints:                                         <br>&nbsp;
+		Divide-by-zero errors are common mistakes when <br>&nbsp;
+		working the F.S. analysis integral.  Do you see<br>&nbsp;
+		something like (2 &ndash; <i>n</i>) in a denominator? Then<br>&nbsp;
+		this solution is good only  if <i>n</i> &ne; 2. Handle the <br>&nbsp;
+		<i>n</i> = 2 case separately by substituting <i>n</i> = 2 early,   <br>&nbsp;
+		before the (2 &ndash; <i>n</i>) gets expressed in a denom. <br>&nbsp;
+		                                               <br>&nbsp;
+		Keep Euler's rule in mind.  Remember that com- <br>&nbsp;
+		plex exponentials can be written as cos() + <i>j</i>sin()<br>&nbsp;
+		or similar trigonometric forms and vice versa.  <br>&nbsp;
+		                                               <br>&nbsp;
+		Terms like cos(2<img src="pi.gif" alt=&pi;><i>n</i>) should be reduced.<br>&nbsp;
+		cos(2<img src="pi.gif" alt=&pi;><i>n</i>) = 1 for all <i>n</i>         <br>&nbsp;
+		                                               <br>&nbsp;
+		Terms like cos(<img src="pi.gif" alt=&pi;><i>n</i>) can be reduced to<br>&nbsp;
+		cos(<img src="pi.gif" alt=&pi;><i>n</i>) = (&ndash;1)<sup>n</sup><br>&nbsp;
+		                                               <br>&nbsp;
+		Similar maneuvers can be made with sin()  <br>&nbsp;
+		functions involving multiples of <img src="pi.gif" alt=&pi;>.<br>&nbsp;
+		                                               <br>&nbsp;
+		In the answer for 2.39.1, <i>x<sub>n</sub></i> = 0 for most <i>n</i> but <br>&nbsp;
+		not every <i>n</i>.                            <br>&nbsp;
+		                                               <br>&nbsp;
+		The answer for 2.39.4 for odd <i>n</i> can be  <br>&nbsp;
+		expressed in the form (integer)/(<i>pn</i>)<sup>2</sup>.  Here <i>p</i> is<br>&nbsp;
+		a real constant and <i>n</i> is the harmonic number.<br>&nbsp;
+		If <i>n</i> is even but not zero, then <i>x<sub>n</sub></i> equals a "special <br>&nbsp;
+		integer." If <i>n</i> = 0, then <i>x<sub>n</sub></i> = <i>x<sub>0</sub></i> = a rational number.
+		
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top"> 
  4
