2nd attempt to publish EGR 204 PS#6 solutions

--- a/F19/204/204F19PS.HTM
+++ b/F19/204/204F19PS.HTM
@@ -156,7 +156,7 @@ PS                                                           <BR>
         9/19
         
    <!-- Returned -->    </TD><TD align="center" valign="top"><BR>
-        &nbsp; <!-- <a href=
+        <a href=
         "https://dordt.instructure.com/files/155117505/download?download_frd=1"
         title="Click to see solutions">9/24</a><br>
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
