--- a/F19/363/363F19PS.HTM
+++ b/F19/363/363F19PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 9/19/2019 10:13 pm)
+                               >(Last update: 9/21/2019 1:58 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -101,37 +101,62 @@ PS                                                       </small>
         Topics:  Fourier Series                        <br>&nbsp;
         Read Ch 2 Sec. 2.2                             <br>&nbsp;
 		                                               <br>&nbsp;
-        <DO>Do 2.39.1, 2.39.4</DO>                     <br>&nbsp;
+        <DO>Do 2.36, 2.39.1, 2.39.4</DO>                     <br>&nbsp;
 		                                               <br>&nbsp;
-		Hints:                                         <br>&nbsp;
-		Divide-by-zero errors are common mistakes when <br>&nbsp;
-		working the F.S. analysis integral.  Do you see<br>&nbsp;
-		something like (2 &ndash; <i>n</i>) in a denominator? Then<br>&nbsp;
+		<b>Hints:</b>                                  <br>&nbsp;
+		For problem 2.36 the author expects you to let <br>&nbsp;
+		the basis signals equal zero outside of the    <br>&nbsp;
+		defined interval [&alpha;, &alpha; + <i>T<sub>0</sub></i>].<br>&nbsp;
+		                                               <br>&nbsp;
+		<b>Divide-by-zero errors</b> are possible mistakes <br>&nbsp;
+		when working the F.S. analysis integral.  Do you<br>&nbsp;
+		see something like (2 &ndash; <i>n</i>) in a denominator? Then<br>&nbsp;
 		this solution is good only  if <i>n</i> &ne; 2. Handle the <br>&nbsp;
 		<i>n</i> = 2 case separately by substituting <i>n</i> = 2 early,   <br>&nbsp;
 		before the (2 &ndash; <i>n</i>) gets expressed in a denom. <br>&nbsp;
 		                                               <br>&nbsp;
-		Keep Euler's rule in mind.  Remember that com- <br>&nbsp;
+		Keep <b>Euler's rule</b> in mind.  Remember that com- <br>&nbsp;
 		plex exponentials can be written as cos() + <i>j</i>sin()<br>&nbsp;
 		or similar trigonometric forms and vice versa.  <br>&nbsp;
 		                                               <br>&nbsp;
-		Terms like cos(2<img src="pi.gif" alt=&pi;><i>n</i>) should be reduced.<br>&nbsp;
+		Terms like <b>cos(2<img src="pi.gif" alt=&pi;><i>n</i>) can be reduced</b>.<br>&nbsp;
 		cos(2<img src="pi.gif" alt=&pi;><i>n</i>) = 1 for all <i>n</i>         <br>&nbsp;
 		                                               <br>&nbsp;
-		Terms like cos(<img src="pi.gif" alt=&pi;><i>n</i>) can be reduced to<br>&nbsp;
+		Terms like <b>cos(<img src="pi.gif" alt=&pi;><i>n</i>) can be reduced</b> to<br>&nbsp;
 		cos(<img src="pi.gif" alt=&pi;><i>n</i>) = (&ndash;1)<sup>n</sup><br>&nbsp;
 		                                               <br>&nbsp;
 		Similar maneuvers can be made with sin()  <br>&nbsp;
 		functions involving multiples of <img src="pi.gif" alt=&pi;>.<br>&nbsp;
 		                                               <br>&nbsp;
-		In the answer for 2.39.1, <i>x<sub>n</sub></i> = 0 for most <i>n</i> but <br>&nbsp;
+		In the answer for <b>2.39.1</b>, <i>x<sub>n</sub></i> = 0 for most <i>n</i> but <br>&nbsp;
 		not every <i>n</i>.                            <br>&nbsp;
 		                                               <br>&nbsp;
-		The answer for 2.39.4 for odd <i>n</i> can be  <br>&nbsp;
+		The answer for <b>2.39.4</b> for odd <i>n</i> can be  <br>&nbsp;
 		expressed in the form (integer)/(<i>pn</i>)<sup>2</sup>.  Here <i>p</i> is<br>&nbsp;
 		a real constant and <i>n</i> is the harmonic number.<br>&nbsp;
 		If <i>n</i> is even but not zero, then <i>x<sub>n</sub></i> equals a "special <br>&nbsp;
-		integer." If <i>n</i> = 0, then <i>x<sub>n</sub></i> = <i>x<sub>0</sub></i> = a rational number.
+		integer." If <i>n</i> = 0, then <i>x<sub>n</sub></i> = <i>x<sub>0</sub></i> = a rational number.<br>&nbsp;
+		                                               <br>&nbsp;
+		Two <b>additional slides</b> have been added at the<br>&nbsp;
+		end of the slide file for <a href=
+		"https://dordt.instructure.com/files/155132723/download?download_frd=1"
+		>9/12</a>.  These slides <br>&nbsp;
+		elaborate on the definition of the dot product of<br>&nbsp;
+		two signals. These slides might be helpful in   <br>&nbsp;
+		working <b>Problem 2.36</b>.                   <br>&nbsp;
+		                                               <br>&nbsp;
+		<b>Note: errata on textbook page 107, Prob. 2.38</b><br>&nbsp;
+		This problem is not assigned, but an error in  <br>&nbsp;
+		this problem statement could be confusing when <br>&nbsp;
+		working Problem 2.36. In the first integral in <br>&nbsp;
+		the problem statement of problem 2.38 the "1"  <br>&nbsp;
+		and the "0" are interchanged from where they   <br>&nbsp;
+		should be.  The integral evaluates to 0 if <i>i</i> &ne; <i>j</i>    <br>&nbsp;
+		and it evaluates to 1 if <i>i</i> = <i>j</i>   <br>&nbsp;
+		                                               <br>&nbsp;<small>
+		Note:  In class on 9/17 prof. d<small>DB</small> said that Problem 2.36<br>&nbsp;
+		was moved from PS#4 to PS#5.  This finally got noted on<br>&nbsp;
+		this web page on 9/21 at about 1:15 PM</small>
 		
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top"> 
@@ -156,7 +181,7 @@ PS                                                       </small>
 		tedious (hence not assigned), but the theorems <br>&nbsp;
 		are famous.                                    <br>&nbsp;
 		                                               <br>&nbsp;
-        <DO>Do 2.31, 2.34, 2.35, 2.36</DO>
+        <DO>Do 2.31, 2.34, 2.35</DO>
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top"> 
  3
