Publshed EGR363 solutions to PS#4

--- a/F19/363/363F19PS.HTM
+++ b/F19/363/363F19PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 9/21/2019 1:58 pm)
+                               >(Last update: 9/21/2019 3:20 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -169,9 +169,9 @@ PS                                                       </small>
         9/19<br>
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        &nbsp;<!-- <a href=
-		"https://dordt.instructure.com/files/114137518/download?download_frd=1"
-		>9/12</a><br>        
+        <a href=
+		"https://dordt.instructure.com/files/155135018/download?download_frd=1"
+		>9/24</a><br>        
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics:  Linearity, convolution                <br>&nbsp;
         Read Ch 2 Sec. 2.1                             <br>&nbsp;
