EGR 204 slides published and PS#9 puplished.  Aminor change to EGR 362 homework page

--- a/F19/204/204F19PS.HTM
+++ b/F19/204/204F19PS.HTM
@@ -54,7 +54,7 @@ INTRODUCTION TO MICROPROCESSORS AND DIGITAL CIRCUITS--EGR 204<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                                >(Last update 9/20/2019 8:53 pm)
+                                >(Last update 9/24/2019 1:46 pm)
 <!--  LAST UPDATE  ----------------------------------- -->
                                                  </DIV></TD></TR>
 </TABLE>
@@ -102,6 +102,51 @@ PS                                                           <BR>
         Do  2-34<!--5-->, (more to be added)
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
+ 9
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        9/24
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        9/24<BR>
+        10/01
+        
+   <!-- Returned -->    </TD><TD align="center" valign="top"><BR>
+        &nbsp; <!-- <a href=
+        "http://courses.dordt.edu/file.php/34/S13/HW/204S13P05.PDF"
+        title="Click to see solutions">2/01</a><br>
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics: Value Fixing, Vectors (Busses),        <br>&nbsp;
+		Decoders, Encoders, Multiplexers, partitioning <br>&nbsp;
+		Read Chapter 2, Section 2.6, 2.7,              <br>&nbsp;
+        Chapter 3 Sections 3-1 through 3-6.            <BR>&nbsp;
+        <DO>Do 3-35*, 3-42*, 3-44, 3-46</DO>                   <br>&nbsp;
+		                                               <br>&nbsp;
+		Note errata on <a href=
+        "../../errata/Mano_Kime/5th/MKM_5_ERR.HTM#P_127"
+                      >pages 127-128, Example 3-5</a>.
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
+ --
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        9/24
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        ---<BR>
+        ---
+        
+   <!-- Returned -->    </TD><TD align="center" valign="top"><BR>
+        ---
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Study for the test on Thursday, 9/26           <br>&nbsp;
+		No homework or peer grading is due on 9/26     <br>&nbsp;
+        <a href="https://dordt.instructure.com/courses/2573771#T1"
+		>Details</a> are published on Canvas regarding <br>&nbsp;
+		the material covered on the test, allowable    <br>&nbsp;
+        calculators, etc.		
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
  8
 
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
@@ -119,7 +164,7 @@ PS                                                           <BR>
         Topics: Decoders, Encoders                     <br>&nbsp;
 		Read Chapter 2, Section 2.6, 2.7,              <br>&nbsp;
         Chapter 3 Sections 3-1 through 3-6.            <BR>&nbsp;
-        <DO>Do 2-28, 3-21, 3-24</DO>                   <br>&nbsp;
+        <DO>Do 2-28, 3-21, 3-24*</DO>                   <br>&nbsp;
 		                                               <br>&nbsp;
 		Note errata on <a href=
         "../../errata/Mano_Kime/5th/MKM_5_ERR.HTM#P_127"
