--- a/F19/204/204F19DN.HTM
+++ b/F19/204/204F19DN.HTM
@@ -129,13 +129,13 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Friday    -->&nbsp;<!--start comment-->K-map &amp; XOR, bus notation, decoders, encoders<!--end comment--></td>  
    </TR><!-- Week of 9/23------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
-	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
-	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-	  9/24<!-- --</a><!-- --><br><!-- --<a href=
+	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
+	  "https://dordt.instructure.com/files/155313252/download?download_frd=1"><!-- -->
+	  9/24<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       9/26<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Monday    -->&nbsp;<!--start comment-->Prob 3.24*, Multiplexers, partitioning, demultiplexers, adders<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><font color=grey>Test #1 (No slides)</font><!--end comment--></td>  
    </TR><!-- Week of 9/30------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
