--- a/F19/363/363F19PS.HTM
+++ b/F19/363/363F19PS.HTM
@@ -53,7 +53,7 @@ INTRODUCTION TO COMMUNICATION SYSTEMS&mdash;EGR 363<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                               >(Last update: 9/26/2019 3:15 pm)
+                               >(Last update: 9/26/2019 5:02 pm)
 <!--  LAST_UPDATE------------------------------ -------- - -->
 <!--  Avoid Wednesday Due dates due to CA's Tu evening class -->
                                                  </DIV></TD></TR>
@@ -142,9 +142,9 @@ PS                                                       </small>
         9/26<br>
         
    <!-- Returned -->        </TD><TD align="center" valign="top">
-        &nbsp;<!-- <a href=
-		"https://dordt.instructure.com/files/114137518/download?download_frd=1"
-		>9/12</a><br>        
+        <a href=
+		"https://dordt.instructure.com/files/155466900/download?download_frd=1"
+		>10/01</a><br>        
    <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
         Topics:  Fourier Series                        <br>&nbsp;
         Read Ch 2 Sec. 2.2                             <br>&nbsp;
