--- a/F19/204/204F19PS.HTM
+++ b/F19/204/204F19PS.HTM
@@ -54,7 +54,7 @@ INTRODUCTION TO MICROPROCESSORS AND DIGITAL CIRCUITS--EGR 204<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                                >(Last update 9/24/2019 10:21 pm)
+                                >(Last update 10/01/2019 2:01 pm)
 <!--  LAST UPDATE  ----------------------------------- -->
                                                  </DIV></TD></TR>
 </TABLE>
@@ -100,6 +100,28 @@ PS                                                           <BR>
         Topics: Hardware description languages (HDL)   <br>&nbsp;
         Read Ch 2 Sec 2-8, 2-9                    <BR>&nbsp;
         Do  2-34<!--5-->, (more to be added)
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
+ A<sub>16</sub>
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        10/01
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        10/08<BR>
+        10/10
+        
+   <!-- Returned -->    </TD><TD align="center" valign="top"><BR>
+        &nbsp; <!-- <a href=
+        "http://courses.dordt.edu/file.php/34/S13/HW/204S13P05.PDF"
+        title="Click to see solutions">2/01</a><br>
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics: BCD addition, Signed integers          <br>&nbsp;
+        Read Ch 1 Sec 1-5, Classroom slides from <a href=
+		"https://dordt.instructure.com/files/155991043/download?download_frd=1"
+		>10/01 <BR>&nbsp;
+        <DO>Do  <a href="DDB_3_91.pdf">3-91</a>, <a href="DDB_3_92.pdf">3-92</a>,  <a href="DDB_3_93.pdf">3-93</a></DO>                           <br>&nbsp;
+		(Each problem number is a link.)
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  9
