--- a/F19/363/363F19DN.HTM
+++ b/F19/363/363F19DN.HTM
@@ -139,13 +139,13 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Friday    -->&nbsp;<!--start comment-->The inverse Fourier Series<!--end comment--></td>  
    </TR><!-- Week of 9/30------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
-	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
-	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-	  10/01<!-- --</a><!-- --><br><!-- --<a href=
+	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
+	  "https://dordt.instructure.com/files/156028819/download?download_frd=1"><!-- -->
+	  10/01<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       10/03<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Monday    -->&nbsp;<!--start comment-->Table of F.S. pairs, Trig and Compact F.S., Properties of F.S. <!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><font color=grey>No class&mdash;Heartland Break</font><!--end comment--></td>  
    </TR><!-- Week of 10/07------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
