--- a/F19/204/204F19DN.HTM
+++ b/F19/204/204F19DN.HTM
@@ -140,7 +140,7 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
    </TR><!-- Week of 9/30------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
 	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
-	  "https://dordt.instructure.com/files/156197245/download?download_frd=1"><!-- -->
+	  "https://dordt.instructure.com/files/156398468/download?download_frd=1"><!-- -->
 	  10/01<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       10/03<!-- --</a><!-- --></td>
@@ -149,13 +149,13 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Friday    -->&nbsp;<!--start comment--><font color=grey>No class&mdash;Heartland Break</font><!--end comment--></td>  
    </TR><!-- Week of 10/07------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
-	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
-	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-	  10/08<!-- --</a><!-- --><br><!-- --<a href=
+	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
+	  "https://dordt.instructure.com/files/156398471/download?download_frd=1"><!-- -->
+	  10/08<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       10/10<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Monday    -->&nbsp;<!--start comment-->Arithmetic in unsigned binary, signed magnitude, and ones' complement<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><!--end comment--></td>  
    </TR><!-- Week of 10/14------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
