--- a/F19/204/204F19PS.HTM
+++ b/F19/204/204F19PS.HTM
@@ -54,7 +54,7 @@ INTRODUCTION TO MICROPROCESSORS AND DIGITAL CIRCUITS--EGR 204<BR>
                    <DIV style="text-align:right; margin-top: 0px;
                               margin-bottom: 1px; font-size: 80%"
 
-                                >(Last update 10/01/2019 9:20 pm)
+                                >(Last update 10/01/2019 2:40 pm)
 <!--  LAST UPDATE  ----------------------------------- -->
                                                  </DIV></TD></TR>
 </TABLE>
@@ -100,6 +100,28 @@ PS                                                           <BR>
         Topics: Hardware description languages (HDL)   <br>&nbsp;
         Read Ch 2 Sec 2-8, 2-9                    <BR>&nbsp;
         Do  2-34<!--5-->, (more to be added)
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
+ B<sub>16</sub>
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        10/08
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        10/10<BR>
+        10/15
+        
+   <!-- Returned -->    </TD><TD align="center" valign="top"><BR>
+        &nbsp; <!-- <a href=
+        "http://courses.dordt.edu/file.php/34/S13/HW/204S13P05.PDF"
+        title="Click to see solutions">2/01</a><br>
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics: unsigned, signed mag., ones' comp. <br>&nbsp;
+        Read Classroom slides from <a href=
+		"https://dordt.instructure.com/files/156398471/download?download_frd=1"
+		>10/08 <BR>&nbsp;
+        <DO>Do  <a href="DDB_3_94.docx">3-94</a>, <a href="DDB_3_95.docx">3-95</a>,  <a href="DDB_3_96.docx">3-96</a></DO>                           <br>&nbsp;
+		(Each problem number is a link.)
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
  A<sub>16</sub>
