--- a/F19/363/363F19DN.HTM
+++ b/F19/363/363F19DN.HTM
@@ -149,13 +149,13 @@ a.tooltip:hover span{ /*the span will display only on :hover state*/
       <!--Friday    -->&nbsp;<!--start comment--><font color=grey>No class&mdash;Heartland Break</font><!--end comment--></td>  
    </TR><!-- Week of 10/07------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
-	  <TD width= "45" align="center" valign="bottom"><!-- --<a href=
-	  "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
-	  10/08<!-- --</a><!-- --><br><!-- --<a href=
+	  <TD width= "45" align="center" valign="bottom"><!-- --><a href=
+	  "https://dordt.instructure.com/files/156446318/download?download_frd=1"><!-- -->
+	  10/08<!-- --></a><!-- --><br><!-- --<a href=
       "https://dordt.instructure.com/files/xxxxxxxx/download?download_frd=1"><!-- -->
       10/10<!-- --</a><!-- --></td>
       <TD align="left" valign="bottom">
-      <!--Monday    -->&nbsp;<!--start comment--><!--end comment--><br>
+      <!--Monday    -->&nbsp;<!--start comment-->Parseval's for F.S., Defn of Fourier Transform<!--end comment--><br>
       <!--Friday    -->&nbsp;<!--start comment--><font color=grey>Test #1 (No slides)</font><!--end comment--></td>  
    </TR><!-- Week of 10/14------------------------------------------------------------------ --><TR>
       <TD width= "15" align="center" valign="bottom">U<br>R</td>
