--- a/F19/204/204F19PS.HTM
+++ b/F19/204/204F19PS.HTM
@@ -102,6 +102,38 @@ PS                                                           <BR>
         Do  2-34<!--5-->, (more to be added)
 <!-- ------------------------------------------ --></TD></TR><TR>
    <!-- PS#  -->                  <TD align="right" valign="top">
+ C<sub>16</sub>
+
+   <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
+        10/10
+
+   <!-- Due -->             </TD><TD align="center" valign="top">
+        10/15<BR>
+        10/17
+        
+   <!-- Returned -->    </TD><TD align="center" valign="top"><BR>
+        &nbsp; <!-- <a href=
+        "http://courses.dordt.edu/file.php/34/S13/HW/204S13P05.PDF"
+        title="Click to see solutions">2/01</a><br>
+   <!-- Assignment -->  </TD><TD align="left" valign="top">&nbsp;
+        Topics: twos' comp., offset binary <br>&nbsp;
+        Read slides from <a href=
+		"https://dordt.instructure.com/files/156398471/download?download_frd=1"
+		>10/10</a>, Sec. 3-9, thru 3.12<BR>&nbsp;
+        <DO>Do  <a href="DDB_3_97.docx">3-97</a>, 3-55</DO><br>&nbsp;
+		                                                   <br>&nbsp;
+		Hints for Problem 3-55:                            <br>&nbsp;
+		1.) All the given numbers are in the 2C form,      <br>&nbsp; &nbsp; &nbsp;&nbsp;
+		    regardless of their algebraic sign! (But yes, the<br>&nbsp; &nbsp; &nbsp;&nbsp;
+		    negative numbers are in 2C form if you need a  <br>&nbsp;  &nbsp; &nbsp;&nbsp;
+		    reminder.) 									   <br>&nbsp;
+		2.) Do the addition or subtraction in an 8-bit word.<br>&nbsp;
+		3.) To change the bit-width of a 2C number you     <br>&nbsp; &nbsp; &nbsp;&nbsp;
+		need to use sign extension.  See textbook          <br>&nbsp; &nbsp; &nbsp;&nbsp;
+		    page 182.                                      <br>&nbsp;
+		Problem 3-97 can be downloaded from the link.
+<!-- ------------------------------------------ --></TD></TR><TR>
+   <!-- PS#  -->                  <TD align="right" valign="top">
  B<sub>16</sub>
 
    <!-- Assigned --><BR><BR></TD><TD align="center" valign="top">
@@ -119,7 +151,7 @@ PS                                                           <BR>
         Topics: unsigned, signed mag., ones' comp. <br>&nbsp;
         Read Classroom slides from <a href=
 		"https://dordt.instructure.com/files/156398471/download?download_frd=1"
-		>10/08 <BR>&nbsp;
+		>10/08</a> <BR>&nbsp;
         <DO>Do  <a href="DDB_3_94.docx">3-94</a>, <a href="DDB_3_95.docx">3-95</a>,  <a href="DDB_3_96.docx">3-96</a></DO>                           <br>&nbsp;
 		(Each problem number is a link.)
 <!-- ------------------------------------------ --></TD></TR><TR>
